my minesweeper finish

--- a/index.html
+++ b/index.html
@@ -11,5 +11,9 @@
     <div id="message"></div>
     <div id="notes"></div>
     <div class="board"></div>
+    <br>
+    <div>
+      <button class="reset">RESET</button>
+    </div>
   </body>
 </html>
